
[workspace.package]
version = "0.9.3"
authors = ['Dhiway Networks <info@dhiway.com>']
edition = "2021"
homepage = "https://cord.network"
repository = "https://github.com/dhiway/cord"
license = "GPL-3.0"

[workspace]
resolver = "2"

members = [
	"node/cli",
	"node/rpc",
	"node/inspect",
	"node/testing",
	"pallets/asset",
	"pallets/chain-space",
	"pallets/did",
	"pallets/did-name",
	"pallets/identity",
	"pallets/network-membership",
	"pallets/network-score",
	"pallets/node-authorization",
	"pallets/offences",
	"pallets/runtime-upgrade",
	"pallets/session-benchmarking",
	"pallets/statement",
	"primitives/cord",
	"primitives/identifier",
	"primitives/network-membership",
	"runtimes/common",
	"runtimes/common/api/assets",
	"runtimes/common/api/did",
	"runtimes/common/api/weight",
	"runtimes/common/authorities",
	"runtimes/braid/",
	"runtimes/braid/constants",
	"runtimes/loom/",
	"runtimes/loom/constants",
	"runtimes/weave/",
	"runtimes/weave/constants",
	"utilities",
	"test-utils",
	"test-utils/cli",
	"test-utils/client",
	"test-utils/runtime",
	"test-utils/runtime/client",
	"test-utils/runtime/transaction-pool",
	"test-utils/service",

]
default-members = ["node/cli"]

[workspace.dependencies]
# crates.io dependencies
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false }
scale-info = { version = "2.11.1", default-features = false }
static_assertions = { version = "1.1.0", default-features = false }
bitvec = { version = "1.0.1", default-features = false }
smallvec = { version = "1.11.0", default-features = false }
hex-literal = { version = "0.4.1", default-features = false }
libsecp256k1 = { version = "0.7.0", default-features = false }
log = { version = "0.4.21", default-features = false }
primitive-types = { version = "0.12.1", default-features = false }
serde = { version = "1.0.197", default-features = false }
serde_derive = { version = "1.0.197", default-features = false }
serde_json = { version = "1.0.114", default-features = false }
serde_yaml = { version = "0.9", default-features = false }
syn = { version = "2.0.53", default-features = false }
thiserror = { version = "1.0.48", default-features = false }
quote = { version = "1.0.33", default-features = false }
array-bytes = { version = "6.2.2", default-features = false }
cfg-if = { version = "1.0", default-features = false }
clap = { version = "4.5.3" }
clap_complete = { version = "4.0.2" }
jsonrpsee = { version = "0.23.2", default-features = false }
jsonrpsee-core = { version = "0.23.2", default-features = false }
futures = { version = "0.3.30", default-features = false }
hex = { version = "0.4.3", default-features = false }
toml = { version = "0.8.8" }
tempfile = { version = "3.8.1", default-features = false }
assert_cmd = { version = "2.0.10", default-features = false }
assert_matches = { version = "1.5.0", default-features = false }
nix = { version = "0.28.0", default-features = false }
regex = { version = "1.10.2", default-features = false }
soketto = { version = "0.7.1", default-features = false }
tokio = { version = "1.37.0", default-features = false }
tokio-util = { version = "0.7.8", default-features = false }
fs_extra = { version = "1.3.0", default-features = false }
async-channel = { version = "1.8.0", default-features = false }
fdlimit = { version = "0.3.0", default-features = false }
parking_lot = { version = "0.12.1", default-features = false }
json-patch = { version = "1.0.0", default-features = false }
async-trait = { version = "0.1.79", default-features = false }
trie-db = { version = "0.29.0", default-features = false }
fluent-uri = { version = "0.1.4", default-features = false }
bitflags = { version = "1.3.2", default-features = false }
enumflags2 = { version = "0.7.7", default-features = false }
maplit = { version = "1.0.2", default-features = false }
bs58 = { version = "0.5.1", default-features = false }
blake2-rfc = { version = "0.2.18", default-features = false }
kvdb = { version = "0.13.0", default-features = false }
kvdb-rocksdb = { version = "0.19.0", default-features = false }
parity-db = { version = "0.4.12", default-features = false }
env_logger = { version = "0.11.3", default-features = false }
serial_test = { version = "2.0.0", default-features = false }
environmental = { version = "1.1.4", default-features = false }
trybuild = { version = "1.0.88", default-features = false }
tikv-jemallocator = { version = "0.5.0", default-features = false }

# local dependencies
authority-membership = { path = "runtimes/common/authorities", default-features = false }
identifier = { package = "cord-identifier", path = "primitives/identifier", default-features = false }
cord-node-cli = { path = "node/cli", default-features = false }
cord-primitives = { path = "primitives/cord", default-features = false }
network-membership = { path = "primitives/network-membership", default-features = false }
cord-braid-runtime = { path = "runtimes/braid", default-features = false }
cord-braid-runtime-constants = { path = "runtimes/braid/constants", default-features = false }
cord-runtime-common = { path = "runtimes/common", default-features = false }
cord-loom-runtime = { path = "runtimes/loom", default-features = false }
cord-loom-runtime-constants = { path = "runtimes/loom/constants", default-features = false }
cord-weave-runtime = { path = "runtimes/weave", default-features = false }
cord-weave-runtime-constants = { path = "runtimes/weave/constants", default-features = false }
cord-node-service = { path = "node/service", default-features = false }
cord-node-inspect = { path = "node/inspect", default-features = false }
cord-node-rpc = { path = "node/rpc", default-features = false }
cord-node-testing = { path = "node/testing", default-features = false }
cord-test-utils = { path = "test-utils", default-features = false }
cord-service-test = { path = "test-utils/service", default-features = false }
cord-test-runtime = { path = "test-utils/runtime", default-features = false }
cord-test-client = { path = "test-utils/client", default-features = false }
cord-test-runtime-client = { path = "test-utils/runtime/client", default-features = false }
cord-test-runtime-transaction-pool = { path = "test-utils/runtime/transaction-pool", default-features = false }
cord-cli-test-utils = { path = "test-utils/cli", default-features = false }
cord-utilities = { path = "utilities", default-features = false }
pallet-membership = { path = 'pallets/membership/', default-features = false }
pallet-config = { path = 'pallets/config/', default-features = false }
pallet-did = { path = 'pallets/did', default-features = false }
pallet-did-name = { path = 'pallets/did-name', default-features = false }
pallet-schema = { path = 'pallets/schema', default-features = false }
pallet-chain-space = { path = 'pallets/chain-space', default-features = false }
pallet-statement = { path = 'pallets/statement', default-features = false }
pallet-network-membership = { path = 'pallets/network-membership', default-features = false }
pallet-runtime-upgrade = { path = 'pallets/runtime-upgrade', default-features = false }
pallet-identity = { path = 'pallets/identity', default-features = false }
pallet-offences = { path = 'pallets/offences', default-features = false }
pallet-node-authorization = { path = "pallets/node-authorization", default-features = false }
pallet-network-score = { path = 'pallets/network-score', default-features = false }
pallet-session-benchmarking = { path = 'pallets/session-benchmarking', default-features = false }
pallet-assets-runtime-api = { path = "runtimes/common/api/assets", default-features = false }
pallet-did-runtime-api = { path = "runtimes/common/api/did", default-features = false }
pallet-transaction-weight-runtime-api = { path = "runtimes/common/api/weight", default-features = false }
pallet-registries = { path = "pallets/registries", default-features = false }
pallet-entries = { path = "pallets/entries", default-features = false }

# substrate dependencies
frame-benchmarking = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
frame-benchmarking-cli = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
frame-executive = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
frame-support = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
frame-support-test = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
frame-try-runtime = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
frame-system = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
frame-system-benchmarking = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
frame-system-rpc-runtime-api = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
substrate-state-trie-migration-rpc = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
substrate-frame-rpc-system = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
substrate-rpc-client = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }

sp-authority-discovery = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sp-application-crypto = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sp-api = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sp-block-builder = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sp-blockchain = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sp-cli = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sp-core = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sp-consensus = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sp-consensus-aura = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sp-consensus-babe = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sp-consensus-beefy = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sp-consensus-grandpa = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sp-externalities = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sp-genesis-builder = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sp-io = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sp-inherents = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sp-keystore = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sp-keyring = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sp-offchain = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sp-runtime = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sp-std = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sp-staking = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sp-session = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sp-storage = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sp-state-machine = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sp-transaction-pool = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sp-timestamp = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sp-trie = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sp-version = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sp-weights = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sp-tracing = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sp-rpc = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sp-crypto-hashing = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sp-transaction-storage-proof = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sp-maybe-compressed-blob = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }

sc-block-builder = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sc-cli = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sc-client-api = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sc-chain-spec = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sc-consensus = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sc-transaction-pool = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sc-transaction-pool-api = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sc-network = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sc-network-common = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sc-network-sync = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sc-consensus-slots = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sc-consensus-epochs = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sc-consensus-babe = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sc-consensus-babe-rpc = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sc-consensus-grandpa = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sc-consensus-grandpa-rpc = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sc-client-db = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sc-rpc = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sc-basic-authorship = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sc-service = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sc-telemetry = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sc-executor = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sc-authority-discovery = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sc-rpc-api = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sc-rpc-spec-v2 = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sc-sync-state-rpc = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sc-sysinfo = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sc-storage-monitor = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sc-offchain = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sc-keystore = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
sc-executor-common = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }

pallet-authorship = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
pallet-asset-conversion = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
pallet-assets = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
pallet-authority-discovery = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
pallet-babe = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
pallet-balances = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
pallet-contracts = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
pallet-collective = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
pallet-grandpa = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
pallet-im-online = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
pallet-indices = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
pallet-multisig = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
pallet-preimage = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
pallet-remark = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
pallet-scheduler = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
pallet-session = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
pallet-sudo = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
pallet-timestamp = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
pallet-transaction-payment = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
pallet-transaction-payment-rpc = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
pallet-treasury = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
pallet-utility = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
pallet-insecure-randomness-collective-flip = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
pallet-root-testing = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }

# Build deps
substrate-wasm-builder = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
substrate-build-script-utils = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }
substrate-prometheus-endpoint = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.15.0" }

[workspace.lints.rust]
suspicious_double_ref_op = { level = "allow", priority = 2 }

[workspace.lints.clippy]
all = { level = "allow", priority = 0 }
correctness = { level = "warn", priority = 1 }
complexity = { level = "warn", priority = 1 }
if-same-then-else = { level = "allow", priority = 2 }
zero-prefixed-literal = { level = "allow", priority = 2 }            # 00_1000_000
type_complexity = { level = "allow", priority = 2 }                  # raison d'etre
nonminimal-bool = { level = "allow", priority = 2 }                  # maybe
borrowed-box = { level = "allow", priority = 2 }                     # Reasonable to fix this one
too-many-arguments = { level = "allow", priority = 2 }               # (Turning this on would lead to)
needless-lifetimes = { level = "allow", priority = 2 }               # generated code
unnecessary_cast = { level = "allow", priority = 2 }                 # Types may change
identity-op = { level = "allow", priority = 2 }                      # One case where we do 0 +
useless_conversion = { level = "allow", priority = 2 }               # Types may change
unit_arg = { level = "allow", priority = 2 }                         # stylistic
option-map-unit-fn = { level = "allow", priority = 2 }               # stylistic
bind_instead_of_map = { level = "allow", priority = 2 }              # stylistic
erasing_op = { level = "allow", priority = 2 }                       # E.g. 0 * DOLLARS
eq_op = { level = "allow", priority = 2 }                            # In tests we test equality.
while_immutable_condition = { level = "allow", priority = 2 }        # false positives
needless_option_as_deref = { level = "allow", priority = 2 }         # false positives
derivable_impls = { level = "allow", priority = 2 }                  # false positives
stable_sort_primitive = { level = "allow", priority = 2 }            # prefer stable sort
extra-unused-type-parameters = { level = "allow", priority = 2 }     # stylistic
default_constructed_unit_structs = { level = "allow", priority = 2 } # stylistic

[profile.release]
panic = 'unwind'
opt-level = 3

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[profile.dev]
split-debuginfo = "unpacked"

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
inherits = "release"

[profile.testnet]
inherits = "release"
debug = 1               # debug symbols are useful for profilers
debug-assertions = true
overflow-checks = true

[profile.dev.package]
blake2 = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hash-db = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
substrate-bip39 = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }
