[package]
name = 'cord-inspect'
version = "0.8.0"
authors = ['Dhiway Networks <info@dhiway.com>']
edition = '2021'
license = "GPL-3.0"
homepage = "https://cord.network"
repository = "https://github.com/dhiway/cord"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.38" }

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.2.2" }
thiserror = "1.0"
sc-cli = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.38" }
sc-client-api = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.38" }
sc-executor = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.38" }
sc-service = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.38", default-features = false }
sp-blockchain = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.38" }
sp-core = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.38" }
sp-runtime = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.38" }
