[package]
name = 'cord-inspect'
version = "0.9.0"
authors = ['Dhiway Networks <info@dhiway.com>']
edition = '2021'
license = "GPL-3.0"
homepage = "https://cord.network"
repository = "https://github.com/dhiway/cord"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.1.0" }

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.6.1" }
thiserror = "1.0"
sc-cli = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.1.0" }
sc-client-api = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.1.0" }
sc-service = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.1.0", default-features = false }
sp-blockchain = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.1.0" }
sp-core = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.1.0" }
sp-runtime = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.1.0" }
